# equivariant-map-gen

./: README.md  e2_pix2pix.yaml  e2_pix2pix_wgan.yaml  measure_equivariance.ipynb  pix2pix.yaml  pix2pix_measure_eq.yaml  pix2pix_rotate.yaml
equivariantgan/: pyproject.toml
equivariantgan/src/equivariantgan/datamodule/: map_datamodule.py
equivariantgan/src/equivariantgan/dataset/: map_dataset.py  module.py
equivariantgan/src/equivariantgan/experiments/: measure_equiv.py  pix2pix_experiment.py
equivariantgan/src/equivariantgan/gan/e2_pix2pix/: discriminator.py  generator.py
equivariantgan/src/equivariantgan/gan/pix2pix/: discriminator.py  generator.py
equivariantgan/src/equivariantgan/gan/stylegan2/: __init__.py  augment.py  discriminator.py  generator.py  loss.py  module.py
equivariantgan/src/equivariantgan/training/: map_gan.py  map_wgan_gp.py
equivariantgan/src/equivariantgan/utils/: measures.py
