[tool.poetry]
name = "equivariantgan"
version = "0.1.0"
description = ""
authors = ["Krzysztof Galus <krzysztof.galus.k7@gmail.com>", "Adam Chłopowiec <adam.chlopowiec@gmail.com>"]
readme = "README.md"
packages = [{include = "equivariantgan", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.1"
numpy = "^1.26.2"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
torchvision = "^0.16.1"
lightning = "^2.1.2"
einops = "^0.7.0"
kornia = "^0.7.0"
vector-quantize-pytorch = "^1.12.4"
contrastive-learner = "^0.1.1"
tensorboard = "^2.15.1"
transformers = "^4.36.2"
torch-ema = "^0.3"
clean-fid = "^0.1.35"
pandas = "^2.1.4"
pydantic = "^2.5.3"
hydra-core = "^1.3.2"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
